# monaco-in-dioxus

./: Cargo.toml  Dioxus.toml  README.md
assets/: index.html  main.css
src/: components.rs  content.rs  main.rs
src/components/: editor.rs
