[package]
name = "monaco-in-dioxus"
version = "0.1.0"
authors = ["David Mattiuz <mattiuzdev@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["desktop"] }
dioxus-desktop = { version = "0.6.0"}
dioxus-document = "0.6"
serde_json = "1.0.143"
muda = "0.11.5"
tokio = { version = "1.0", features = ["time", "rt-multi-thread", "macros"] }
warp = "0.3"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[package.metadata.dioxus.desktop]
asset_dir = "assets"
